Fix install script issues: handle virtual environment activation scope and existing repo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,8 @@ dependencies = [
     "pyinstaller>=6.14.2",
     "pyobjc-framework-corewlan>=11.1",
 ]
+
+[tool.uv.workspace]
+members = [
+    "SignalSurfer",
+]
